--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content=" The people, food and the prime locations make the perfect place good friends & family to come together and have great time.">
     <link rel="icon" type="image/x-icon" href="./pictures/logo/logo_thetasteat.ico">
     <title>TheTastEat</title>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@400;700&family=Josefin+Sans&display=swap" rel="stylesheet">
